# rs-forum-poc

./: .gitignore  Cargo.toml  README.md
src/: main.rs  router.rs
src/controller/: auth.rs  hello.rs  mod.rs
src/model/: t_user.rs
src/utils/: g.rs  jwt.rs  mod.rs
templates/: hello.html  login.html
tests/: test_jwt.rs  test_orm.rs
