[package]
name = "rs-forum"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
routerify = "3.0.0"
hyper = "0.14"
askama = "0.10"
flexi_logger = "0.17"
log = "0.4.14"
fdlimit = "0.2.1"