[package]
name = "rs-forum"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
routerify = "3.0.0"
hyper = "0.14"
askama = "0.10"
flexi_logger = "0.17"
log = "0.4.14"
fdlimit = "0.2.1"
url = "2.2.2"

dotenv = "0.15.0"
serde = { version = "1", features = ["derive"] }
rbson = "2.0"
rbatis = { version = "3.1.4", default-features = false, features = ["mysql","runtime-tokio-native-tls"] }
sqlx-core = { version = "0.5.11", default-features = false, features = ["runtime-tokio-native-tls"] }